Paper last version with guille's changes

--- a/paper/inc/conclusions.tex
+++ b/paper/inc/conclusions.tex
@@ -2,8 +2,8 @@
 
 In this paper, we proposed a method to  exchange anonymous and private information using onion routing over a DTN network applying dynamic graphs as a way of representing periodical contact information.
 
-\red{Think relevant conclusions!}
+An important conclusion is that unlike in traditional networks, in DTNs not always the shortest paths are the quickest ones. In addition, we can conclude that using our algorithm we can obtain several paths that are not directly related to time. By this way, we make the guessing of the chosen path more difficult.
 
-In our future work, we will search and analyse efficient ways of path choosing, being able to use the algorithm in resource-constrained computers as our proposed method complexity is high as it explores every possible path. Another future branch of research can be decrease the impact of active attacks like black holes using a reputation system. By this way the reputation value will be shared among all nodes in the network. The path choosing algorithm should be modified too to take this value into consideration in the choosing process. Finally this will lead into another security analysis because the more reputation a node has, most probable is to be one of the chosen nodes in the path.
+In our future work, we will search and analyse efficient ways of path selection, as currently our path selection method is non efficient because it explores every possible path. The efficiency comes crucial when resource-constrained computers are involved like the tiny computers used in IoT, that could fit perfectly in each bus in our scenario. Another future research branch can be to decrease the impact of active attacks like black holes using a reputation system. As, the reputation value will be shared among all nodes in the network. The path selection algorithm should be modified too to take this value into consideration in the path selection process. Finally, this will lead into another security analysis because more reputation a node has, most probable is to be one of the chosen nodes in the path.
 
-We also noted that the contact data representation can be dynamic, i.e: the simulation model can be adapted to consider traffic modifications, generating the enough information to decrease the number of  failed contacts due to a bad contact prediction.
+We also noted that the contact data representation can be dynamic, i.e: the simulation model can be adapted to consider traffic modifications, generating enough information to decrease the number of  failed contacts due to a bad contact prediction.
