--- a/paper/inc/introduction.tex
+++ b/paper/inc/introduction.tex
@@ -1,15 +1,11 @@
 \section{Introduction}\label{sec:intro}
 
-Delay Tolerant Networks (DTNs) \cite{dtn-definition} are a class of networks aimed to provide end-to-end communication into environments lacking continuous connectivity or with long delays. To do so, a new layer called Bundle layer is used. It works on top of transport layer to handle disruptions and long delays using the store-carry-and-forward principle. The received data, called bundle, is stored in persistent storage on each DTN node, forwarding it when a new opportunity of contact occurs.
+Delay Tolerant Networks (DTNs) \cite{dtn-definition} are a class of networks aimed to provide end-to-end communication into environments lacking continuous connectivity or with long delays. To do so, a new network layer called bundle is used. It works on top of the transport layer to handle disruptions and long delays using the store-carry-and-forward principle. The received data, called bundle, is stored in persistent storage on each DTN node, forwarding it when a new opportunity of contact appears.
 
-There are several scenarios where the DTNs can be useful like reporting systems, deep space missions, disaster recovery and rural area networks among other things. Many of these applications needs to preserve user information as they can share sensible information. In traditional encryption the transmitted data is hidden from thirds.  Nonetheless the source and destination identities are shown, leading to possible attackers know information about the victim. Using onion routing we are able to preserve the anonymity of such nodes too, e.g: in anonymous reporting systems a user may want to preserve his identity to avoid possible reprisal.
+There are several scenarios where DTNs can be useful like sensing systems, deep space missions, disaster recovery, and rural area networks. Many of these applications need to preserve user information as they can share sensitive information. In traditional encryption the transmitted data is hidden from third parties.  Nonetheless, the source and destination identities are shown, leading to potential information leaks about sender and receiver. Techniques can be used to preserve the anonymity too, e.g: in anonymous sensing systems a user may want to preserve his identity to avoid possible reprisal.
 
-We will focus in reporting systems where the data as well as the identity of the nodes need to be protected using the DTN as a communication alternative as DTN can be used as an alternative when the usual network can not be trusted.
+A popular technique to achieve anonymous communication in traditional networks is onion routing \cite{onion-routing}. Onion routing provides source anonymity by encapsulating messages in layers of encryption. It is said that onion routing is not aplicable to DTNs because onion routing method needs to know the route in advance to perform the cryptographic layers for each node \cite{dtn-security-analysis}. Nevertheless, this protocol can be applicable in deterministic (predictable) DTNs. Deterministic DTNs have been studied before \cite{probabilistic-dtn}, \cite{deterministic-dtn}. Using predictable DTNs, the route to encrypt the message needed in onion routing can be obtained. At the same time, we solve the challenging routing problem in DTNs \cite{oracle-types} because we decide to which nodes forward the message.
 
-A popular method to achieve sender anonymity as well as data preservation is onion routing \cite{onion-routing}. Onion routing is used to protect the communications allowing to hide the source of a message as well as the data itself to the rest of the nodes that forwards the information. It is said that onion routing is not aplicable to DTNs \cite{dtn-security-analysis}. Nevertheless, this protocol can be applicable if we use predictable (deterministic) DTNs. Deterministic DTNs has been studied before \cite{probabilistic-dtn}, \cite{deterministic-dtn}. A method to represent the network behaviour, as is used in our proposal, is trough a graph representation where nodes are the elements of the network and each edge of the graph is a contact between nodes.
+Previous research work on the use of onion routing in DTNs is very scarce. Possibly, the most relevant is ARNDEN \cite{arden}. ARDEN uses groups of nodes to perform the layering process and broadcast messages between these groups. The message's route is chosen randomly. To perform the cryptographic layers attribute based encryption (ABE) is used. Our method is easier to implement than ARDEN, and does not need complex protocol cryptography methods like ABE.
 
-As onion routing needs to know the route in advance to encrypt the message accordingly for each node in the path, we solve the challenging routing problem in DTNs \cite{oracle-types}. 
-
-There are previous research using DTN and onion routing together to achieve anonymous communications like in \cite{arden}. \red{Explain why this algorithm is not as good as ours.} \red{Explain other methods that was researched like \cite{enpassant}...}
-
-The remainder of the paper is organized as follows: Section \ref{sec:proposal} presents a deeper review of relevant concepts used to design an algorithm to choose a path from a given set of restrictions. Allowing to perform the layering stage of onion routing. Section \ref{sec:sanalysis} presents an informal analysis of the security of our proposal from the point of view of passive and active attackers. Section \ref{sec:evaluation} presents the results of our simulation over public transport networks, as they are considered predictable networks. This results show the performance of our method in terms of different statistical metrics. Section \ref{sec:conclusions} provides concluding remarks as well as possible future research work.
+The remainder of the paper is organized as follows: Section \ref{sec:relevant-concepts} presents a deeper review of relevant concepts used in our proposal. Section \ref{sec:proposal} shows the process to use onion routing over predictable DTNs. A method to know the route in advance, given a set of restrictions, for the layering process is proposed. Section \ref{sec:sanalysis} presents an informal analysis of the security of our proposal from the point of view of passive and active attackers. Section \ref{sec:evaluation} presents the results of our simulation over a public transport network (considered predictable networks). This results show the performance of our method in terms of different statistical metrics. Section \ref{sec:conclusions} provides concluding remarks as well as possible future research work.
