--- a/paper/inc/securityanalysis.tex
+++ b/paper/inc/securityanalysis.tex
@@ -2,28 +2,30 @@
 
 %\red{Aim of this section: •.}
 
-In this section, we evaluate our proposed scheme from the aspect of security. First, we define the threat model, defining important considerations regarding the scenario under study. After, we define different kinds of adversaries explaining what they can do and what we do to preserve the sender anonymity as well as the privacy of exchanged information.
+In this section, we evaluate our proposed scheme from a security perspective. First, we define the threat model, defining important considerations regarding the scenario under study. Later, we define different kinds of adversaries explaining what they can do and what we do to preserve the sender anonymity as well as the privacy of exchanged information.
 
 \subsection{Threat model}
 
-Alice (\textit{A}) wants to communicate to Bob (\textit{B}) without revealing information about her. Using onion routing we intend to improve A's anonymity as well as data privacy against adversaries that can be passive,i.e: eavesdropping messages or take an active paper in this scenario, i.e: make modifications or attack to other nodes of the network. In general, security threats can be divided into passive and active threats. We consider that nodes in our scenario use strong cryptographic algorithms with enough key lengths to prevent practical cryptanalysis attacks to discover the source, the destination or the contents of a message. 
+Alice (\textit{A}) wants to communicate to Bob (\textit{B}) without revealing information about her. Using onion routing we intend to improve A's anonymity as well as data privacy against adversaries that can be passive (eavesdropping messages) or take an active role in this scenario (make message modifications or attack to other nodes of the network). In general, security threats can be divided into passive and active threats. We consider that nodes in our scenario use strong cryptographic algorithms with enough key lengths to prevent practical cryptanalysis attacks to discover the source, the destination or the contents of a message. 
 
 \subsection{Passive adversaries}
 
-Passive attacks are those that perform guessing simply observing user traffic patterns from "passive" nodes. 
+Passive attacks are those that perform guessing simply observing user traffic patterns from nodes. 
 
-As is explained in \cite{latency-leak} if the attacker is the destination of the message, he can learn something from the delay between messages.  This kind of attacks does not work when sending start time, known as \textit{t} parameter in our path choosing method, is not highly predictable \cite{enpassant}.
+As is explained in \cite{latency-leak} if the attacker is the destination of the message, he can learn something from the delay between messages.  This kind of attacks does not work when the sending start time, known as \textit{t} in our path selection method, is not highly predictable \cite{enpassant}.
 
-Another attacker model is a set of compromised nodes that works together to retrieve information leading to break the users privacy. We have two different situations to deal with: the multiple decryption and the sending node periodicity. First, the attacker will be able to decrypt more layers, or messages if one of the nodes is the destination, because they have their corresponding private keys. Second, there are scenarios where a node or a set of them rarely transmit information to others, discarding this nodes from the probable sending set, a globally passive adversary can correctly guess the source of a message. To overcome such attacks the \textit{n} value can be increased, i.e: the number of nodes that has a single path to send the message. As much nodes, much layers a message will have. There is a trade-off between efficiency and security deciding \textit{n} value. To solve the guessing issue the creation of dummy packets when ingress throughput drops below a certain threshold \cite{arden} may help to prevent such attacks.
+Another attacker model is a set of compromised nodes that work together to retrieve information leading to break the users privacy. One possible situation is the multiple decryption. An attacker will be able to decrypt more layers, or messages if one of the nodes is the destination, because they have their corresponding private keys. To overcome such attacks the \textit{n} value can be increased, i.e: the number of nodes that will have to pass through the message. A message will have as much layers as nodes are in the path. There is a trade-off between efficiency and security when deciding the value of \textit{n} that needs to be studied in future researches. 
 
-Is important to note that an attacker can combine previously explained attacks to increase their chance of guessing.
+Another possible scenario where a set of compromised nodes work together is the sending node periodicity analysis. There are scenarios where a node or a set of them rarely transmit information to others, discarding this nodes from the probable sending set, a globally passive adversary can correctly guess the source of a message. To solve the guessing issue the creation of dummy packets when ingress throughput drops below a certain threshold \cite{arden} may help to prevent such attacks.
 
-To decrease the probability of guess the path, different paths are retrieved using our path choosing method and one of them is chosen randomly.
+To decrease the probability of guessing the path when several nodes are compromised and one of them is the destination, different paths are retrieved using our path selection method and one of them is chosen randomly. By this way, we pretend to make harder to guess the sender of the message simply analysing the origin and the destination of every compromised node in the path as well as the sending time.
+
+It is  important to note that an attacker can combine previously explained attacks to increase its chance of guessing.
 
 \subsection{Active adversaries}
 
-Active adversaries are those that performs actions against other nodes or modifies information that cross through them. As is the case of passive nodes, an attacker controlling a single node will be unable to extract the source of a message because of the use of multiple layers of encryption \cite{arden}. There are several possible attacks to do against onion routing by malign node in the network \cite{congestion-attack}, \cite{location-attack}, \cite{latency-leak}.
+Active adversaries are those that perform actions against other nodes or modify information transmitted through them. As is the case of passive nodes, an attacker controlling a single node will be unable to extract the source of a message because of the use of multiple layers of encryption \cite{arden}. There are several possible attacks against onion routing by malicious nodes in the network like congestion attacks \cite{congestion-attack}, location based attacks \cite{location-attack}, and attacks based on latency analysis \cite{latency-leak}.
 
-An attacker who has a control of a node of the network can attacking non-observed nodes to shut them down. Prohibiting the communication between the source and the destination if that node was implied in involved in the chosen path. This kind of attacks are called Denial of Service DoS attacks and can be addressed improving the robustness of the nodes as well as with reputation systems as in discussed in conclusions and future work section \ref{sec:conclusions}.
+An attacker who has control of a node of the network can attack other nodes to shut them down leading to undelivered messages. This kind of attacks are called Denial of Service DoS attacks and can be addressed improving the robustness of the nodes as well as with reputation systems as are discussed in section \ref{sec:conclusions}: conclusions and future work.
 
 Message modifications by attackers are easily detected using cryptographic hash methods. Other attacks like masquerading (nodes pretending to be different nodes) are solved as layers of encryption check the node identity. The key management process is safely done in a prior stage.
