--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -178,3 +178,11 @@ keywords = "Attribute-based encryption "
   year={1999},
   publisher={ACM}
 }
+
+
+@misc{ wiki-onion-routing-image,
+  author = {{Wikipedia}},
+  title = "Onion routing",
+  year = "2015",
+  url = "https://en.wikipedia.org/wiki/Onion_routing"
+}
