--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -171,7 +171,7 @@ The author would like to thank Guillermo Navarro Arribas for his excellent advic
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\clearpage
+%\clearpage
 
 \bibliography{paper}
 
@@ -180,3 +180,8 @@ All links were last accessed on \today.
 \bibliographystyle{splncs03}
 
 \end{document}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: t
+%%% End:
